tests/fixtures/invalid/round_bytes_float.py
# Cannot call round() with Bytes, Float
x = round(b"hello", 1.0)
